# arxiv-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
chat/: pyproject.toml
chat/src/chat/: app.py
core/: pyproject.toml
core/src/core/: bootstrap.py
core/src/core/application/: input_port.py  output_port.py  usecase.py
core/src/core/bootstrap/: container.py  vo.py
core/src/core/domain/: entity.py  util.py  vo.py
core/src/core/framework/: driven_adaptor.py  driving_adaptor.py  util.py  vo.py
core/src/resources/searcher/: response_template_v1.yaml
core/tests/: test_application.py  test_bootstrap.py  test_domain.py  test_framework.py
