[tool.poetry]
name = "core"
version = "0.1.0"
description = "Assistant Core"
authors = ["sad-zero <zeroro.yun@gmail.com>"]
readme = "README.md"
packages = [{include = "core", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
langchain = "0.2.16"
langchain-openai = "0.1.24"
langchain-community = "0.2.16"
langchain-ollama = "0.1.3"
faiss-cpu = "1.8.0.post1"
langgraph = "0.2.21"
arxiv = "2.1.3"
pymupdf = "1.24.10"
dependency-injector = "4.42.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"

[tool.poetry.group.extras.dependencies]
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_cli = true
